style and gray skin optimizations

--- a/zDrive/MainWindow.xaml
+++ b/zDrive/MainWindow.xaml
@@ -46,41 +46,22 @@
             </ObjectDataProvider>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid HorizontalAlignment="Left">
+
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical">
-            <ListBox ItemsSource="{Binding Infos}" FontSize="11" Background="{x:Null}" BorderBrush="{x:Null}"
-                     Padding="-1, -2">
+            <ListBox FontSize="11" Background="{x:Null}" BorderBrush="{x:Null}">
+                <ListBox.ItemsSource>
+                    <CompositeCollection>
+                        <CollectionContainer Collection="{Binding Source={StaticResource Locator}, Path=Main.Widgets}" />
+                        <CollectionContainer Collection="{Binding Source={StaticResource Locator}, Path=Main.Drives}" />
+                    </CompositeCollection>
+                </ListBox.ItemsSource>
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="{x:Type ListBoxItem}">
-                        <Style.Resources>
-                        </Style.Resources>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem">
-                                    <Border Name="Border" SnapsToDevicePixels="true">
-                                        <ContentPresenter />
-                                    </Border>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsSelected" Value="true">
-                                            <Setter TargetName="Border" Property="Background" Value="Transparent" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
-            <ListBox ItemsSource="{Binding Drives}" FontSize="11" Background="{x:Null}" BorderBrush="{x:Null}"
-                     Padding="-1, -2">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}">
-                        <Style.Resources>
-                        </Style.Resources>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="ListBoxItem">
@@ -102,76 +83,82 @@
         </StackPanel>
         <Grid Name="PartProperties"
               Grid.Column="1" Width="25" MouseDown="Grid_MouseDown">
-            <Grid.Style>
-                <Style TargetType="Grid">
-                    <Style.Triggers>
-                        <EventTrigger RoutedEvent="MouseEnter">
-                            <BeginStoryboard>
-                                <Storyboard>
-                                    <DoubleAnimation To="1" Duration="0:0:0.1"
-                                                     Storyboard.TargetProperty="Opacity" />
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                        <EventTrigger RoutedEvent="MouseLeave">
-                            <BeginStoryboard>
-                                <Storyboard>
-                                    <DoubleAnimation To="0.1" Duration="0:0:0.1"
-                                                     Storyboard.TargetProperty="Opacity" />
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Grid.Style>
-            <Popup x:Name="PropertiesPopup" Placement="Right"
-                   PopupAnimation="Slide" AllowsTransparency="True"
-                   HorizontalAlignment="Center" VerticalAlignment="Center"
-                   PlacementTarget="{Binding ElementName=PartProperties}">
-                <Grid>
+            <StackPanel>
+                <StackPanel.Style>
+                    <Style TargetType="StackPanel">
+                        <Style.Triggers>
+                            <EventTrigger RoutedEvent="MouseEnter">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation To="1" Duration="0:0:0.1"
+                                                         Storyboard.TargetProperty="Opacity" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="MouseLeave">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation To="0.1" Duration="0:0:0.1"
+                                                         Storyboard.TargetProperty="Opacity" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </StackPanel.Style>
+                <Popup x:Name="PropertiesPopup" Placement="Right"
+                       PopupAnimation="Slide" AllowsTransparency="True"
+                       HorizontalAlignment="Center" VerticalAlignment="Center"
+                       PlacementTarget="{Binding ElementName=PartProperties}">
                     <Grid>
-                        <ContentControl Template="{StaticResource PropertiesBackground}" />
-                    </Grid>
-                    <StackPanel Margin="4">
-                        <CheckBox Name="TopmostCheckbox"
-                                  IsChecked="{Binding Topmost}"
-                                  FontSize="{StaticResource MenuFontSize}"
-                                  Foreground="{StaticResource Foreground}"
-                                  Content="{x:Static p:Resources.TopmostCheckbox_Text}" />
-                        <CheckBox Name="HideUnavailableCheckbox"
-                                  IsChecked="{Binding ShowUnavailable}"
-                                  FontSize="{StaticResource MenuFontSize}"
-                                  Foreground="{StaticResource Foreground}"
-                                  Content="{x:Static p:Resources.HideUnavailableCheckbox_Text}" />
-                        <CheckBox Name="AutorunCheckbox"
-                                  IsChecked="{Binding AutoRun}"
-                                  FontSize="{StaticResource MenuFontSize}"
-                                  Foreground="{StaticResource Foreground}"
-                                  Content="{x:Static p:Resources.AutorunCheckbox_Text}" />
-                        <ComboBox ItemsSource="{Binding Source={StaticResource InfoFormatList}}"
-                                  SelectedItem="{Binding InfoFormat}" />
-                        <Button Name="CloseButton"
-                                Background="{x:Null}" Margin="2"
-                                Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=Window}"
-                                FontSize="{StaticResource MenuFontSize}"
-                                Foreground="{StaticResource Foreground}"
-                                Content="{x:Static p:Resources.CloseButton_Text}" />
-                    </StackPanel>
+                        <Grid>
+                            <ContentControl Template="{StaticResource PropertiesBackground}" />
+                        </Grid>
+                        <StackPanel Margin="4">
+                            <CheckBox Name="TopmostCheckbox"
+                                      IsChecked="{Binding Topmost}"
+                                      FontSize="{StaticResource MenuFontSize}"
+                                      Foreground="{StaticResource Foreground}"
+                                      Content="{x:Static p:Resources.TopmostCheckbox_Text}" />
+                            <CheckBox Name="HideUnavailableCheckbox"
+                                      IsChecked="{Binding ShowUnavailable}"
+                                      FontSize="{StaticResource MenuFontSize}"
+                                      Foreground="{StaticResource Foreground}"
+                                      Content="{x:Static p:Resources.HideUnavailableCheckbox_Text}" />
+                            <CheckBox Name="AutorunCheckbox"
+                                      IsChecked="{Binding AutoRun}"
+                                      FontSize="{StaticResource MenuFontSize}"
+                                      Foreground="{StaticResource Foreground}"
+                                      Content="{x:Static p:Resources.AutorunCheckbox_Text}" />
+                            <ComboBox ItemsSource="{Binding Source={StaticResource InfoFormatList}}"
+                                      SelectedItem="{Binding InfoFormat}" />
+                            <Button Name="CloseButton"
+                                    Background="{x:Null}" Margin="2"
+                                    Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=Window}"
+                                    FontSize="{StaticResource MenuFontSize}"
+                                    Foreground="{StaticResource Foreground}"
+                                    Content="{x:Static p:Resources.CloseButton_Text}" />
+                        </StackPanel>
 
+                    </Grid>
+                </Popup>
+                <Grid>
+                    <Rectangle Fill="{StaticResource SettingsFillBrush}" Width="24" Height="24" MaxHeight="24"
+                               MaxWidth="24"
+                               VerticalAlignment="Center" HorizontalAlignment="Center"
+                               RadiusX="3" RadiusY="3" Opacity="0.03" />
+                    <TextBlock FontWeight="Normal" FontStretch="UltraExpanded" />
+                    <Path
+                        Data="M14 4v-0.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18zM8 8v-4h4v4h-4zM26 13.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-18v4h18v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h6v-4h-6v-0.5zM20 18v-4h4v4h-4zM14 23.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18v-0.5zM8 28v-4h4v4h-4z"
+                        Fill="#7F444444" OpacityMask="Black" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Path.LayoutTransform>
+                            <TransformGroup>
+                                <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
+                            </TransformGroup>
+                        </Path.LayoutTransform>
+                    </Path>
                 </Grid>
-            </Popup>
-            <Rectangle Fill="{StaticResource WhiteBrush}" Width="24" Height="22"
-                       VerticalAlignment="Top" HorizontalAlignment="Left"
-                       RadiusX="3" RadiusY="3" Opacity="0.03" />
-            <Path
-                Data="M14 4v-0.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18zM8 8v-4h4v4h-4zM26 13.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-18v4h18v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h6v-4h-6v-0.5zM20 18v-4h4v4h-4zM14 23.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18v-0.5zM8 28v-4h4v4h-4z"
-                Fill="#7F444444" OpacityMask="Black">
-                <Path.LayoutTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
-                    </TransformGroup>
-                </Path.LayoutTransform>
-            </Path>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
