--- a/zDrive/Skins/GraySkin.xaml
+++ b/zDrive/Skins/GraySkin.xaml
@@ -27,12 +27,12 @@
     <FontFamily x:Key="ContentFontFamily">Verdana</FontFamily>
     <FontWeight x:Key="ContentFontWeight">DemiBold</FontWeight>
     <FontStretch x:Key="ContentFontStretch">UltraExpanded</FontStretch>
-    <system:Double x:Key="ContentFontSize">11</system:Double>
+    <system:Double x:Key="ContentFontSize">12</system:Double>
 
     <FontFamily x:Key="ContentFontFamilyL2">Verdana</FontFamily>
     <FontWeight x:Key="ContentFontWeightL2">Normal</FontWeight>
     <FontStretch x:Key="ContentFontStretchL2">UltraExpanded</FontStretch>
-    <system:Double x:Key="ContentFontSizeL2">8.5</system:Double>
+    <system:Double x:Key="ContentFontSizeL2">10</system:Double>
 
     <Style TargetType="TextBlock" x:Key="TextBlockL1">
         <Setter Property="FontFamily" Value="{StaticResource ContentFontFamily}" />
@@ -63,14 +63,20 @@
     </ControlTemplate>
 
     <Thickness x:Key="ItemsMargin">0.26</Thickness>
-    <Thickness x:Key="ItemContentMargin">1</Thickness>
+    <Thickness x:Key="ItemContentMargin">2</Thickness>
+
+    <GridLength  x:Key="IconColumnWidth">35</GridLength>
+    <system:Double x:Key="IconImageSize">25</system:Double>
+    <system:Double x:Key="DefaultHeight">45</system:Double>
+    <system:Double x:Key="DefaultWidth">155</system:Double>
+    <system:Double x:Key="DefaultProgressBarHeight">12</system:Double>
 
     <Style TargetType="ProgressBar" x:Key="ProgressBarStyle">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ProgressBar">
                     <Border BorderBrush="{StaticResource ProgressBarBorderBrush}"
-                            BorderThickness="0.6" SnapsToDevicePixels="True" Margin="0,0,1,0" Padding="1"
+                            BorderThickness="0.6" SnapsToDevicePixels="True" Margin="0" Padding="1"
                             ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <Grid x:Name="PART_Track">
                             <Rectangle x:Name="PART_Indicator" HorizontalAlignment="Left">
@@ -95,84 +101,32 @@
         </Setter>
     </Style>
 
-    <DataTemplate x:Key="BaseTemplate" DataType="{x:Type interfaces:IInfoViewModel}">
-        <Grid Margin="{StaticResource ItemsMargin}">
-            <Grid Name="Part_Background"
-                  Grid.Row="0" Grid.Column="0">
-                <ContentControl Template="{StaticResource ItemsBackground}" />
-            </Grid>
-            <Grid Name="Part_Content" Margin="{StaticResource ItemContentMargin}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="36" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="10" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid Name="Part_Icon"
-                      Grid.Row="0" Grid.Column="0"
-                      Grid.RowSpan="3"
-                      Width="35" Height="35"
-                      mvvm:MouseBehaviour.MouseDownCommand="{Binding OpenCommand}"
-                      Background="#02A4A4A4" Cursor="Hand">
-                    <Grid>
-                        <Grid.LayoutTransform>
-                            <TransformGroup>
-                                <ScaleTransform ScaleX="0.8" ScaleY="0.8" />
-                                <SkewTransform />
-                                <RotateTransform />
-                                <TranslateTransform />
-                            </TransformGroup>
-                        </Grid.LayoutTransform>
-                        <Path Data="{Binding Type, Converter={StaticResource DriveConverter}}"
-                              Fill="{StaticResource IconBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Grid>
-                </Grid>
-                <StackPanel Name="Part_Name"
-                            Grid.Row="0" Grid.Column="1"
-                            Orientation="Horizontal"
-                            VerticalAlignment="Top" Width="90" MaxWidth="90">
-                    <TextBlock Text="{Binding Name}" Style="{StaticResource TextBlockL1}" />
-                </StackPanel>
-                <TextBlock Name="Part_Info"
-                           Grid.Column="1" Grid.Row="1"
-                           Foreground="{StaticResource ForegroundInfo}"
-                           Text="{Binding Info}" Style="{StaticResource TextBlockL2}" />
-                <ProgressBar Name="Part_ProgressBar"
-                             Grid.Column="1" Grid.Row="2"
-                             VerticalAlignment="Top"
-                             Height="10" Value="{Binding Value, Mode=OneWay}" Style="{StaticResource ProgressBarStyle}" />
-            </Grid>
-        </Grid>
-    </DataTemplate>
     <DataTemplate DataType="{x:Type vm:DriveViewModel}">
-        <Grid Margin="{StaticResource ItemsMargin}">
+        <Grid Margin="{StaticResource ItemsMargin}" Height="{StaticResource DefaultHeight}" Width="{StaticResource DefaultWidth}">
             <Grid Name="Part_Background"
                   Grid.Row="0" Grid.Column="0">
                 <ContentControl Template="{StaticResource ItemsBackground}" />
             </Grid>
             <Grid Name="Part_Content" Margin="{StaticResource ItemContentMargin}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="36" />
+                    <ColumnDefinition Width="{StaticResource IconColumnWidth}" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="10" />
+                    <RowDefinition />
+                    <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid Name="Part_Icon"
                       Grid.Row="0" Grid.Column="0"
                       Grid.RowSpan="3"
-                      Width="35" Height="35"
+                      Width="{StaticResource IconImageSize}" Height="{StaticResource IconImageSize}"
                       mvvm:MouseBehaviour.MouseDownCommand="{Binding OpenCommand}"
                       Background="#02A4A4A4" Cursor="Hand">
                     <Grid>
                         <Grid.LayoutTransform>
                             <TransformGroup>
-                                <ScaleTransform ScaleX="0.8" ScaleY="0.8" />
+                                <ScaleTransform />
                                 <SkewTransform />
                                 <RotateTransform />
                                 <TranslateTransform />
@@ -182,53 +136,51 @@
                               Fill="{StaticResource IconBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Grid>
                 </Grid>
-                <StackPanel Name="Part_Name"
-                            Grid.Row="0" Grid.Column="1"
-                            Orientation="Horizontal"
-                            VerticalAlignment="Top" Width="90" MaxWidth="90">
-                    <TextBlock Text="{Binding Name}"
-                               Foreground="{StaticResource ForegroundName}" Style="{StaticResource TextBlockL1}" />
-                    <TextBlock Text="{Binding Label}"
-                               Foreground="{StaticResource ForegroundName}" Style="{StaticResource TextBlockL1}" />
-                </StackPanel>
+                <TextBlock Name="Part_Name"
+                           Grid.Row="0" Grid.Column="1" 
+                           Text="{Binding DisplayString}"
+                           Foreground="{StaticResource ForegroundName}"
+                           Style="{StaticResource TextBlockL1}" />
                 <TextBlock Name="Part_Info"
                            Grid.Column="1" Grid.Row="1"
                            FontFamily="Verdana"
                            Foreground="{StaticResource ForegroundInfo}"
-                           Text="{Binding Info}" Style="{StaticResource TextBlockL2}" />
+                           Text="{Binding Info}"
+                           Style="{StaticResource TextBlockL2}" />
                 <ProgressBar Name="Part_ProgressBar"
                              Grid.Column="1" Grid.Row="2"
                              VerticalAlignment="Top"
-                             Height="10" Value="{Binding Value, Mode=OneWay}" Style="{StaticResource ProgressBarStyle}" />
+                             Height="{StaticResource DefaultProgressBarHeight}"
+                             Value="{Binding Value, Mode=OneWay}" Style="{StaticResource ProgressBarStyle}" />
             </Grid>
         </Grid>
     </DataTemplate>
     <DataTemplate DataType="{x:Type vm:RamInfoViewModel}">
-        <Grid Margin="{StaticResource ItemsMargin}">
+        <Grid Margin="{StaticResource ItemsMargin}" Height="{StaticResource DefaultHeight}" Width="{StaticResource DefaultWidth}">
             <Grid Name="Part_Background"
                   Grid.Row="0" Grid.Column="0">
                 <ContentControl Template="{StaticResource ItemsBackground}" />
             </Grid>
             <Grid Name="Part_Content" Margin="{StaticResource ItemContentMargin}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="36" />
+                    <ColumnDefinition  Width="{StaticResource IconColumnWidth}" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="10" />
+                    <RowDefinition  />
+                    <RowDefinition  />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid Name="Part_Icon"
                       Grid.Row="0" Grid.Column="0"
                       Grid.RowSpan="3"
-                      Width="35" Height="35"
+                      Width="{StaticResource IconImageSize}" Height="{StaticResource IconImageSize}"
                       mvvm:MouseBehaviour.MouseDownCommand="{Binding OpenCommand}"
                       Background="#02A4A4A4" Cursor="Hand">
                     <Grid>
                         <Grid.LayoutTransform>
                             <TransformGroup>
-                                <ScaleTransform ScaleX="0.8" ScaleY="0.8" />
+                                <ScaleTransform/>
                                 <SkewTransform />
                                 <RotateTransform />
                                 <TranslateTransform />
@@ -238,15 +190,11 @@
                               Fill="{StaticResource IconBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Grid>
                 </Grid>
-                <StackPanel Name="Part_Name"
-                            Grid.Row="0" Grid.Column="1"
-                            Orientation="Horizontal"
-                            VerticalAlignment="Top" Width="90" MaxWidth="90">
-                    <TextBlock Text="{Binding Name}"
-                               Foreground="{StaticResource ForegroundName}" Style="{StaticResource TextBlockL1}" />
-                    <TextBlock Text="{Binding Label}"
-                               Foreground="{StaticResource ForegroundName}" Style="{StaticResource TextBlockL1}" />
-                </StackPanel>
+                <TextBlock Name="Part_Name"
+                           Grid.Row="0" Grid.Column="1" 
+                           Text="{Binding DisplayString}"
+                           Foreground="{StaticResource ForegroundName}"
+                           Style="{StaticResource TextBlockL1}" />
                 <TextBlock Name="Part_Info"
                            Grid.Column="1" Grid.Row="1"
                            FontFamily="{StaticResource ContentFontFamily}"
@@ -255,12 +203,13 @@
                 <ProgressBar Name="Part_ProgressBar"
                              Grid.Column="1" Grid.Row="2"
                              VerticalAlignment="Top"
-                             Height="10" Value="{Binding Value, Mode=OneWay}" Style="{StaticResource ProgressBarStyle}" />
+                             Height="{StaticResource DefaultProgressBarHeight}"
+                             Value="{Binding Value, Mode=OneWay}" Style="{StaticResource ProgressBarStyle}" />
             </Grid>
         </Grid>
     </DataTemplate>
     <DataTemplate DataType="{x:Type vm:DisplaysViewModel}">
-        <Grid Margin="{StaticResource ItemsMargin}">
+        <Grid Margin="{StaticResource ItemsMargin}"  Height="{StaticResource DefaultHeight}" Width="{StaticResource DefaultWidth}">
             <Grid Name="Part_Background"
                   Grid.Row="0" Grid.Column="0">
                 <ContentControl Template="{StaticResource ItemsBackground}" />
@@ -268,7 +217,7 @@
             <Grid Name="Part_Content" Margin="{StaticResource ItemContentMargin}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
-                    <RowDefinition Height="10" />
+                    <RowDefinition Height="Auto" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
             </Grid>
@@ -303,13 +252,12 @@
                 </ListBox.ItemContainerStyle>
             </ListBox>
         </Grid>
-
     </DataTemplate>
     <DataTemplate DataType="{x:Type vm:DisplayViewModel}">
         <Grid ToolTip="{Binding FriendlyName}" Margin="3,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="10" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid Name="Part_Icon"
                   Grid.Row="0"
@@ -318,13 +266,13 @@
                 <Grid>
                     <Grid.LayoutTransform>
                         <TransformGroup>
-                            <ScaleTransform ScaleX="1" ScaleY="1" />
+                            <ScaleTransform/>
                             <SkewTransform />
                             <RotateTransform />
                             <TranslateTransform />
                         </TransformGroup>
                     </Grid.LayoutTransform>
-                    <Path Data="{StaticResource Display}" Stretch="Fill" Width="20" Height="20">
+                    <Path Data="{StaticResource Display}" Stretch="Fill" Width="{StaticResource IconImageSize}" Height="{StaticResource IconImageSize}">
                         <Path.Style>
                             <Style TargetType="Path">
                                 <Style.Triggers>
@@ -342,15 +290,11 @@
                     </Path>
                 </Grid>
             </Grid>
-            <StackPanel Name="Part_Name"
-                        Grid.Row="1"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Top">
-                <TextBlock Name="Part_Info"
-                           FontFamily="{StaticResource ContentFontFamily}"
-                           Foreground="{StaticResource ForegroundInfo}"
-                           Text="{Binding DeviceName}" Style="{StaticResource TextBlockL2}" />
-            </StackPanel>
+            <TextBlock Name="Part_Name"
+                       Grid.Row="1"
+                       Text="{Binding DeviceName}"
+                       Foreground="{StaticResource ForegroundName}"
+                       Style="{StaticResource TextBlockL2}" />
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
