--- a/zDrive/MainWindow.xaml
+++ b/zDrive/MainWindow.xaml
@@ -35,13 +35,14 @@
     </Window.DataContext>
     <Window.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/GraySkin.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            <ObjectDataProvider x:Key="InfoFormatList" MethodName="GetValues"
-                                ObjectType="{x:Type system:Enum}">
+            <ObjectDataProvider x:Key="InfoFormatList" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="converters:InfoFormat" />
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <ObjectDataProvider x:Key="SkinsList" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="converters:Theme" />
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
         </ResourceDictionary>
@@ -112,34 +113,35 @@
                        PlacementTarget="{Binding ElementName=PartProperties}">
                     <Grid>
                         <Grid>
-                            <ContentControl Template="{StaticResource PropertiesBackground}" />
+                            <ContentControl Template="{DynamicResource PropertiesBackground}" />
                         </Grid>
                         <StackPanel Margin="4">
                             <CheckBox Name="TopmostCheckbox"
                                       IsChecked="{Binding Topmost}"
-                                      FontSize="{StaticResource MenuFontSize}"
-                                      Foreground="{StaticResource Foreground}"
+                                      FontSize="{DynamicResource MenuFontSize}"
+                                      Foreground="{DynamicResource Foreground}"
                                       Content="{x:Static p:Resources.TopmostCheckbox_Text}" />
                             <CheckBox Name="HideUnavailableCheckbox"
                                       IsChecked="{Binding ShowUnavailable}"
-                                      FontSize="{StaticResource MenuFontSize}"
-                                      Foreground="{StaticResource Foreground}"
+                                      FontSize="{DynamicResource MenuFontSize}"
+                                      Foreground="{DynamicResource Foreground}"
                                       Content="{x:Static p:Resources.HideUnavailableCheckbox_Text}" />
                             <CheckBox Name="AutorunCheckbox"
                                       IsChecked="{Binding AutoRun}"
-                                      FontSize="{StaticResource MenuFontSize}"
-                                      Foreground="{StaticResource Foreground}"
+                                      FontSize="{DynamicResource MenuFontSize}"
+                                      Foreground="{DynamicResource Foreground}"
                                       Content="{x:Static p:Resources.AutorunCheckbox_Text}" />
                             <ComboBox ItemsSource="{Binding Source={StaticResource InfoFormatList}}"
                                       SelectedItem="{Binding InfoFormat}" />
+                            <ComboBox ItemsSource="{Binding Source={StaticResource SkinsList}}"
+                                      SelectedItem="{Binding Theme}" />
                             <Button Name="CloseButton"
                                     Background="{x:Null}" Margin="2"
                                     Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=Window}"
-                                    FontSize="{StaticResource MenuFontSize}"
-                                    Foreground="{StaticResource Foreground}"
+                                    FontSize="{DynamicResource MenuFontSize}"
+                                    Foreground="{DynamicResource Foreground}"
                                     Content="{x:Static p:Resources.CloseButton_Text}" />
                         </StackPanel>
-
                     </Grid>
                 </Popup>
                 <Grid>
