--- a/zDrive/Skins/ControlTemplates.xaml
+++ b/zDrive/Skins/ControlTemplates.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:vm="clr-namespace:zDrive.ViewModels"
                     xmlns:mvvm="clr-namespace:zDrive.Mvvm">
@@ -24,7 +24,8 @@
                       Grid.Row="0" Grid.Column="0"
                       Grid.RowSpan="3"
                       Width="{DynamicResource IconImageSize}" Height="{DynamicResource IconImageSize}"
-                      mvvm:MouseBehaviour.MouseDownCommand="{Binding OpenCommand}"
+                      mvvm:MouseBehaviour.LeftMouseButtonDownCommand="{Binding LeftMouseCommand}"
+                      mvvm:MouseBehaviour.RightMouseButtonDownCommand="{Binding RightMouseCommand}"
                       Background="#02A4A4A4" Cursor="Hand">
                     <Grid>
                         <Grid.LayoutTransform>
@@ -80,7 +81,7 @@
                       Grid.Row="0" Grid.Column="0"
                       Grid.RowSpan="3"
                       Width="{DynamicResource IconImageSize}" Height="{DynamicResource IconImageSize}"
-                      mvvm:MouseBehaviour.MouseDownCommand="{Binding OpenCommand}"
+                      mvvm:MouseBehaviour.MouseDownCommand="{Binding LeftMouseCommand}"
                       Background="#02A4A4A4" Cursor="Hand">
                     <Grid>
                         <Grid.LayoutTransform>
