--- a/zDrive/MainWindow.xaml
+++ b/zDrive/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="zDrive.MainWindow"
+<Window x:Class="zDrive.MainWindow"
         x:Name="Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -131,6 +131,16 @@
                                       FontSize="{DynamicResource MenuFontSize}"
                                       Foreground="{DynamicResource Foreground}"
                                       Content="{x:Static p:Resources.AutorunCheckbox_Text}" />
+                            <CheckBox Name="RamCheckbox"
+                                      IsChecked="{Binding Ram}"
+                                      FontSize="{DynamicResource MenuFontSize}"
+                                      Foreground="{DynamicResource Foreground}"
+                                      Content="{x:Static p:Resources.RamCheckbox_Text}" />
+                            <CheckBox Name="CpuCheckbox"
+                                      IsChecked="{Binding Cpu}"
+                                      FontSize="{DynamicResource MenuFontSize}"
+                                      Foreground="{DynamicResource Foreground}"
+                                      Content="{x:Static p:Resources.CpuCheckbox_Text}" />
                             <ComboBox ItemsSource="{Binding Source={StaticResource InfoFormatList}}"
                                       SelectedItem="{Binding InfoFormat}" />
                             <ComboBox ItemsSource="{Binding Source={StaticResource SkinsList}}"
@@ -148,11 +158,11 @@
                     <Rectangle Fill="{StaticResource SettingsFillBrush}" Width="24" Height="24" MaxHeight="24"
                                MaxWidth="24"
                                VerticalAlignment="Center" HorizontalAlignment="Center"
-                               RadiusX="3" RadiusY="3" Opacity="0.03" />
+                               RadiusX="3" RadiusY="3" Opacity="0.02" />
                     <TextBlock FontWeight="Normal" FontStretch="UltraExpanded" />
                     <Path
                         Data="M14 4v-0.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18zM8 8v-4h4v4h-4zM26 13.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-18v4h18v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h6v-4h-6v-0.5zM20 18v-4h4v4h-4zM14 23.5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v0.5h-6v4h6v0.5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-0.5h18v-4h-18v-0.5zM8 28v-4h4v4h-4z"
-                        Fill="#7F444444" OpacityMask="Black" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        Fill="#E5444444" OpacityMask="Black" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Path.LayoutTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleX="0.6" ScaleY="0.6" />
